# xmonad-solomon

./: .gitignore  Justfile  cabal.project  flake.nix  overlay.nix  xmonad-solomon.cabal  xmonad.hs
scripts/: dmenu-acpi.sh
src/: Prompt.hs
