cabal-version:       2.4
name:                xmonad-solomon
version:             0.1.0.0
synopsis:            Solomon's xmonad configuration.
homepage:            https://github.com/ssbothwel/nixos-config
license:             GPL-3.0-only
license-file:        LICENSE
author:              Solomon Bothwell
maintainer:          ssbothwell@gmail.com
category:            System
build-type:          Simple

--------------------------------------------------------------------------------

common common-config
  build-depends:
    base >= 4.12 && < 5,

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wno-star-is-type

  default-language:
    Haskell2010

--------------------------------------------------------------------------------

executable xmonad-solomon
  import:
    common-config
  main-is:
    xmonad.hs
  build-depends:
    containers,
    process>=1.4.3.0,
    X11>=1.8,
    xmonad-contrib,
    xmonad
  hs-source-dirs:
    .

library
  import:
    common-config
  build-depends:     
    containers,
    process>=1.4.3.0,
    X11>=1.8,
    xmonad-contrib,
    xmonad,
    mtl
  exposed-modules:
    Prompt
  hs-source-dirs:
    src