cabal-version:       3.0
name:                xmonad-solomon
version:             0.1.0.0
synopsis:            Solomon's xmonad configuration.
homepage:            https://github.com/solomon-b/xmonad-solomon
license:             GPL-3.0-only
license-file:        LICENSE
author:              Solomon Bothwell
maintainer:          ssbothwell@gmail.com
category:            System
build-type:          Simple

--------------------------------------------------------------------------------

executable xmonad-solomon
  main-is:
    xmonad.hs
  hs-source-dirs:
    .
  default-extensions:
    ImportQualifiedPost,
    InstanceSigs,
    LambdaCase,
    NamedFieldPuns,
    OverloadedStrings,
    OverloadedStrings,
    TypeApplications

  build-depends:
    aeson,
    base >= 4.12 && < 5,
    bytestring,
    containers,
    mtl,
    process>=1.4.3.0,
    utf8-string,
    X11>=1.8,
    xmonad-contrib,
    xmonad

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wno-star-is-type
    -Wno-missing-signatures

  default-language:
    Haskell2010
